chore(project): Added base tailwind config and base router

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*@layer base {*/
+/*    @font-face {*/
+/*        font-family: 'Fredoka';*/
+/*        font-style: normal;*/
+/*        font-weight: 400;*/
+/*        font-display: swap;*/
+/*        src: local('Fredoka'), url(/src/assets/fonts/Fredoka-Variable.ttf) format('ttf');*/
+/*    }*/
+/*}*/
+
+* {
+    font-family: "Fredoka", "sans-serif";
+}
