--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/*@layer base {*/
-/*    @font-face {*/
-/*        font-family: 'Fredoka';*/
-/*        font-style: normal;*/
-/*        font-weight: 400;*/
-/*        font-display: swap;*/
-/*        src: local('Fredoka'), url(/src/assets/fonts/Fredoka-Variable.ttf) format('ttf');*/
-/*    }*/
-/*}*/
-
 * {
-    font-family: "Fredoka", "sans-serif";
+    font-family: "Manrope", "sans-serif";
 }
